syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zupacademy.keymanagergrpc.pix";
option java_outer_classname = "KeyManagerServiceOuterClass";
//option objc_class_prefix = "HLW";

package br.com.zupacademy.keymanagergrpc.pix;

message RegistraChavePixRequest {
  string erpClienteId = 1;
  string chave = 2;
  TipoChave tipoChave = 3;
  TipoConta tipoConta = 4;

  enum TipoChave {
    UNKNOWN_CHAVE = 0;
    RANDOM = 1;
    CPF = 2;
    TELEFONE_CELULAR = 3;
    EMAIL = 4;
  }
  enum TipoConta {
    UNKNOWN_CONTA = 0;
    CONTA_CORRENTE = 1;
    CONTA_POUPANCA = 2;
  }
}
message RegistraChavePixResponse {
  int64 id = 1;
}

// renomear o serviço abaixo, pois está muito generalista
service KeyManagerService {
  rpc registraChavePix(RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}


message RemoveChavePixRequest {
  int64 chaveId = 1;
  string erpClienteId = 2;
}
message RemoveChavePixResponse {
  string erpClienteId = 1;
  string chave = 2;
}
/* resolvi separar em diferentes serviços pq o gRPC começa a se perder nos serviços, ficava lançando erro de
UNIMPLEMENTED Method*/
service KeyManagerRemoveService {
  rpc removeChavePix(RemoveChavePixRequest) returns (RemoveChavePixResponse) {}
}